added a home button and a topbar on all pages ^^

--- a/activities.html
+++ b/activities.html
@@ -10,7 +10,9 @@
 <body>
     <div style="width: 100vw; height: 100vh;">
         <div class="topbar">
-            <img src="images/cortis_logo.png" style="width: 7vw; margin-left: 1vw; margin-right: 1vw;">
+            <a href="index.html">
+                <img src="images/cortis_logo.png" style="width: 7vw; margin-left: 1vw; margin-right: 1vw;">
+            </a>
             <img src="images/cortis_name.png" style="width: 55vw;">
         </div>
         <div>
@@ -30,7 +32,7 @@
                         </a>
                     </td>
                     <td class="table-images">
-                        <a href="members.html">
+                        <a href="memory_match_game.html">
                             <img id="members-image" src="images/members.png" alt="Members image" style="width: 16vw;">
                         </a>
                     </td>
