--- a/discography.html
+++ b/discography.html
@@ -8,8 +8,14 @@
 </head>
 <body>
     <div>
-        <table style="width: 100vw; height: 100vh;">
-            <tr style="height: 100vh;">
+        <div class="topbar">
+            <a href="index.html">
+                <img src="images/cortis_logo.png" style="width: 7vw; margin-left: 1vw; margin-right: 1vw;">
+            </a>
+            <img src="images/cortis_name.png" style="width: 55vw;">
+        </div>
+        <table style="width: 100vw; height: 82vh;">
+            <tr style="height: 82vh;">
                 <td style="width: 40vw; text-align: center; vertical-align: middle;">
                     <img src="images/album-cover.png" alt="Album: Color Outside the box" style="width: 25vw;">
                 </td>
