--- a/keonho.html
+++ b/keonho.html
@@ -9,8 +9,14 @@
 </head>
 <body>
     <div>
-        <table style="width: 100vw; height: 100vh;">
-            <tr style="height: 100vh;">
+        <div class="topbar">
+            <a href="index.html">
+                <img src="images/cortis_logo.png" style="width: 7vw; margin-left: 1vw; margin-right: 1vw;">
+            </a>
+            <img src="images/cortis_name.png" style="width: 55vw;">
+        </div>
+        <table style="width: 100vw; height: 82vh;">
+            <tr style="height: 82vh;">
                 <td class="prev">
                     <button><</button>
                 </td>
