--- a/martin.html
+++ b/martin.html
@@ -9,13 +9,19 @@
 </head>
 <body>
     <div>
-        <table style="width: 100vw; height: 100vh;">
-            <tr style="height: 100vh;">
+        <div class="topbar">
+            <a href="index.html">
+                <img src="images/cortis_logo.png" style="width: 7vw; margin-left: 1vw; margin-right: 1vw;">
+            </a>
+            <img src="images/cortis_name.png" style="width: 55vw;">
+        </div>
+        <table style="width: 100vw; height: 82vh;">
+            <tr style="height: 82vh;">
                 <td class="prev">
                     <button><</button>
                 </td>
                 <td class="table-image-column">
-                    <img src="images/martin.png" alt="Martin" class="slide active" style="width: 13vw;">
+                    <img src="images/martin.png" alt="Martin" class="slide active" style="width: 11vw;">
                     <img src="images/juhoon.png" alt="Martin" class="slide" style="width: 13vw;">
                     <img src="images/james.png" alt="Martin" class="slide" style="width: 13vw;">
                 </td>
