--- a/memory_match_game.html
+++ b/memory_match_game.html
@@ -8,6 +8,12 @@
     <title>Memory Match</title>
 </head>
 <body>
+    <div class="topbar">
+        <a href="index.html">
+            <img src="images/cortis_logo.png" style="width: 7vw; margin-left: 1vw; margin-right: 1vw;">
+        </a>
+        <img src="images/cortis_name.png" style="width: 55vw;">
+    </div>
     <div class="game" id="game"></div>
 </body>
 </html>
