--- a/canvas.html
+++ b/canvas.html
@@ -8,23 +8,31 @@
     <title>Color Outside The Lines</title>
 </head>
 <body>
-    <div class="controls">
-        <div class="color">
-            <button value="#FBFF00"></button>
-            <button value="#009fff"></button>
-            <button value="#000000"></button>
-            <button value="#FF0000"></button>
-            <button value="#3EFF00"></button>
-            <button value="#FFF"></button>
+    <div>
+        <div class="topbar">
+            <a href="index.html">
+                <img src="images/cortis_logo.png" style="width: 7vw; margin-left: 1vw; margin-right: 1vw;">
+            </a>
+            <img src="images/cortis_name.png" style="width: 55vw;">
+        </div>
+        <div class="controls">
+            <div class="color">
+                <button value="#FBFF00"></button>
+                <button value="#009fff"></button>
+                <button value="#000000"></button>
+                <button value="#FF0000"></button>
+                <button value="#3EFF00"></button>
+                <button value="#FFF"></button>
+            </div>
+
+            <input id="brush" type="range" value="1" min="1" max="5" step="1">
+            <button id="save">Save</button>
+            <button id="clear">Clear</button>
+            <br>
         </div>
 
-        <input id="brush" type="range" value="1" min="1" max="5" step="1">
-        <button id="save">Save</button>
-        <button id="clear">Clear</button>
-        <br>
+        <canvas id="paint-canvas"></canvas>
+        <div id="no-draw" class="no-draw"></div>
     </div>
-
-    <canvas id="paint-canvas"></canvas>
-    <div id="no-draw" class="no-draw"></div>
 </body>
 </html>
