--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <div style="width: 100vw; height: 100vh;">
         <div class="topbar">
-            <img src="images/cortis_logo.png" style="width: 7vw; margin-left: 1vw; margin-right: 1vw;">
+            <a href="index.html">
+                <img src="images/cortis_logo.png" style="width: 7vw; margin-left: 1vw; margin-right: 1vw;">
+            </a>
             <img src="images/cortis_name.png" style="width: 55vw;">
         </div>
         <div>
