--- a/lulluby.html
+++ b/lulluby.html
@@ -9,9 +9,15 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="topbar">
+        <a href="index.html">
+            <img src="images/cortis_logo.png" style="width: 7vw; margin-left: 1vw; margin-right: 1vw;">
+        </a>
+        <img src="images/cortis_name.png" style="width: 55vw;">
+    </div>
     <table style="width: 100vw;">
         <tr>
-            <td style="width: 50%; padding-left: 5vw; padding-top: 5vh;">
+            <td style="width: 50%; padding-left: 5vw; padding-top: 2vh;">
                 <div class="translate-buttons">
                     <button onclick="translateToKorean()">korean</button>
                     <button onclick="translateToRomanized()">romanized</button>
@@ -69,17 +75,17 @@
                     </p>
                 </div>
             </td>
-            <td style="width: 50%; padding-top: 5vh; vertical-align: top; text-align: center;">
+            <td style="width: 50%; padding-top: 2vh; vertical-align: top; text-align: center;">
                 <div>
-                    <div>
+                    <div class="mp-text">
                         <p>Music player</p>
                     </div>
                     <div>
-                        <img src="images/album-cover.png" style="width: 15vw;"/>
+                        <img src="images/album-cover.png" class="mp-image"/>
                     </div>
                     <div>
                         <audio id="audio" src="music/lulluby.mp3"></audio>
-                        <button id="playButton">Play</button>
+                        <button id="playButton" class="mp-button"Play</button>
                     </div>
                 </div>
                 <table style="width: 100%; height: 100%;">
