--- a/members.html
+++ b/members.html
@@ -7,9 +7,15 @@
     <title>Members</title>
 </head>
 <body>
-    <div style="width: 100%; height: 100%;">
-        <table style="width: 100vw; height: 100vh;">
-            <tr style="height: 15vh;">
+    <div class="topbar">
+        <a href="index.html">
+            <img src="images/cortis_logo.png" style="width: 7vw; margin-left: 1vw; margin-right: 1vw;">
+        </a>
+        <img src="images/cortis_name.png" style="width: 55vw;">
+    </div>
+    <div style="width: 100vw; height: 82vh;">
+        <table style="width: 100vw; height: 82vh;">
+            <tr style="height: 7%;">
                 <td style="width: 20vw; text-align: center; vertical-align: bottom;">
                     <a href="juhoon.html" class="members-text">Juhoon</a>
                 </td>
@@ -26,7 +32,7 @@
                     <a href="keonho.html" class="members-text">Keonho</a>
                 </td>
             </tr>
-            <tr style="height: 80%;">
+            <tr style="height: 93%;">
                 <td style="width: 20vw; text-align: center;">
                     <img src="images/juhoon.png" alt="Juhoon" style="width: 12vw;">
                 </td>
