--- a/merch.html
+++ b/merch.html
@@ -8,66 +8,74 @@
     <title>Merch</title>
 </head>
 <body>
-    <div class="grid">
-        <div class="cell">
-            <table>
-                <tr>
-                    <td>
-                        <img src="images/album-cover-1.png" alt="Album ver. 1" id="album1" class="slide" style="width: 100%;">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <p>Info</p>
-                        <p>Price</p>
-                    </td>
-                </tr>
-            </table>
+    <div>
+        <div class="topbar">
+            <a href="index.html">
+                <img src="images/cortis_logo.png" style="width: 7vw; margin-left: 1vw; margin-right: 1vw;">
+            </a>
+            <img src="images/cortis_name.png" style="width: 55vw;">
         </div>
-        <div class="cell">
-            <table>
-                <tr>
-                    <td>
-                        <img src="images/album-cover-2.png" id="album2" alt="Album ver. 2" style="width: 100%;">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <p>Info</p>
-                        <p>Price</p>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        <div class="cell">
-            <table>
-                <tr>
-                    <td>
-                        <img src="images/album-cover-3.png" id="album3" alt="Product" id="merch-image" style="width: 100%;">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <p>Info</p>
-                        <p>Price</p>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        <div class="cell">
-            <table>
-                <tr>
-                    <td>
-                        <img src="images/cortis-ball-1.png" id="cortisball" alt="Album ver. 3" class="slide" style="width: 100%;">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <p>Info</p>
-                        <p>Price</p>
-                    </td>
-                </tr>
-            </table>
+        <div class="grid">
+            <div class="cell">
+                <table>
+                    <tr>
+                        <td>
+                            <img src="images/album-cover-1.png" alt="Album ver. 1" id="album1" class="slide" style="width: 100%;">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>Info</p>
+                            <p>Price</p>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div class="cell">
+                <table>
+                    <tr>
+                        <td>
+                            <img src="images/album-cover-2.png" id="album2" alt="Album ver. 2" style="width: 100%;">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>Info</p>
+                            <p>Price</p>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div class="cell">
+                <table>
+                    <tr>
+                        <td>
+                            <img src="images/album-cover-3.png" id="album3" alt="Product" id="merch-image" style="width: 100%;">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>Info</p>
+                            <p>Price</p>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div class="cell">
+                <table>
+                    <tr>
+                        <td>
+                            <img src="images/cortis-ball-1.png" id="cortisball" alt="Album ver. 3" class="slide" style="width: 100%;">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>Info</p>
+                            <p>Price</p>
+                        </td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </div>
 </body>
