--- a/fashion.html
+++ b/fashion.html
@@ -17,7 +17,7 @@
     </div>
     <table style="width: 100vw;">
         <tr>
-            <td style="width: 50%; padding-left: 5vw; padding-top: 2vh;">
+            <td style="width: 50vw; padding-left: 5vw; padding-top: 2vh;">
                 <div class="translate-buttons">
                     <button onclick="translateToKorean()">korean</button>
                     <button onclick="translateToRomanized()">romanized</button>
@@ -108,17 +108,18 @@
                     </p>
                 </div>
             </td>
-            <td style="width: 50%; padding-top: 2vh; vertical-align: top; text-align: center;">
+            <td style="width: 50vw; padding-top: 2vh; vertical-align: top; text-align: center;">
                 <div>
                     <div class="mp-text">
                         <p>Music player</p>
                     </div>
-                    <div>
-                        <img src="images/album-cover.png" class="mp-image"/>
+                    <div class="mp-player">
+                        <img src="images/cd_player.png" class="mp-image"/>
+                        <img src="images/cd.png" class="cd" id="cd"/>
                     </div>
                     <div>
                         <audio id="audio" src="music/fashion.mp3"></audio>
-                        <button id="playButton" class="mp-button">Play</button>
+                        <button id="playButton" class="mp-button">▶️</button>
                     </div>
                 </div>
                 <table style="width: 100%; height: 100%;">
