--- a/fashion.html
+++ b/fashion.html
@@ -122,18 +122,18 @@
                         <button id="playButton" class="mp-button">▶️</button>
                     </div>
                 </div>
-                <table style="width: 100%; height: 100%;">
+                <table style="width: 50vw; height: 100%;">
                     <tr>
-                        <td style="width: 25%;">
+                        <td style="width: 20vw;">
                             <div style="background-color: white;">
-                                <h3>Chorus sheet music</h3>
+                                <h4>Chorus sheet music</h4>
                                 <p>
                                     A S A S A S A S<br>
                                     A S A S A S A S
                                 </p>
                             </div>
                         </td>
-                        <td style="width: 75%;">
+                        <td style="width: 30vw;">
                             <div class="piano" id="piano">
                                 <div class="key" id="A">A</div>
                                 <div class="key" id="S">S</div>
