--- a/joyride.html
+++ b/joyride.html
@@ -84,17 +84,18 @@
                     </p>
                 </div>
             </td>
-            <td style="width: 50%; padding-top: 2vh; vertical-align: top; text-align: center;">
+            <td style="width: 50vw; padding-top: 2vh; vertical-align: top; text-align: center;">
                 <div>
                     <div class="mp-text">
                         <p>Music player</p>
                     </div>
-                    <div>
-                        <img src="images/album-cover.png" class="mp-image"/>
+                    <div class="mp-player">
+                        <img src="images/cd_player.png" class="mp-image"/>
+                        <img src="images/cd.png" class="cd" id="cd"/>
                     </div>
                     <div>
                         <audio id="audio" src="music/joyride.mp3"></audio>
-                        <button id="playButton" class="mp-button">Play</button>
+                        <button id="playButton" class="mp-button">▶️</button>
                     </div>
                 </div>
                 <table style="width: 100%; height: 100%;">
@@ -108,7 +109,7 @@
                                 </p>
                             </div>
                         </td>
-                        <td style="width: 75%;">
+                        <td style="width: 30vw;">
                             <div class="piano" id="piano">
                                 <div class="key" id="A">A</div>
                                 <div class="key" id="S">S</div>
