Added a better readme

--- a/canvas.html
+++ b/canvas.html
@@ -17,11 +17,11 @@
         </div>
         <div class="controls">
             <div class="color">
-                <button value="#FBFF00"></button>
-                <button value="#009fff"></button>
+                <button value="#e09f3e"></button>
+                <button value="#9e2a2b"></button>
+                <button value="#335c67"></button>
+                <button value="#fff3b0"></button>
                 <button value="#000000"></button>
-                <button value="#FF0000"></button>
-                <button value="#3EFF00"></button>
                 <button value="#FFF"></button>
             </div>
 
