--- a/joyride.html
+++ b/joyride.html
@@ -98,11 +98,11 @@
                         <button id="playButton" class="mp-button">▶️</button>
                     </div>
                 </div>
-                <table style="width: 100%; height: 100%;">
+                <table style="width: 50vw; height: 100%;">
                     <tr>
-                        <td style="width: 25%;">
+                        <td style="width: 20vw;">
                             <div style="background-color: white;">
-                                <h3>Chorus sheet music</h3>
+                                <h4>Chorus sheet music</h4>
                                 <p>
                                     FG DD FF AA<br>
                                     D D D D F F
