Updated into in the merch section

--- a/members.html
+++ b/members.html
@@ -34,19 +34,29 @@
             </tr>
             <tr style="height: 93%;">
                 <td style="width: 20vw; text-align: center;">
-                    <img src="images/juhoon.png" alt="Juhoon" style="width: 12vw;">
+                    <a href="juhoon.html">
+                        <img src="images/juhoon.png" alt="Juhoon" style="width: 12vw;">
+                    </a>
                 </td>
                 <td style="width: 20vw; text-align: center;">
-                    <img src="images/james.png" alt="James" style="width: 15vw;">
+                    <a href="james.html">
+                        <img src="images/james.png" alt="James" style="width: 15vw;">
+                    </a>
                 </td>
                 <td style="width: 20vw; text-align: center;">
-                    <img src="images/martin.png" alt="Martin" style="width: 11vw;">
+                    <a href="martin.html">
+                        <img src="images/martin.png" alt="Martin" style="width: 11vw;">
+                    </a>
                 </td>
                 <td style="width: 20vw; text-align: center;">
-                    <img src="images/seonhyeon.png" alt="Seonghyeon" style="width: 13vw;">
+                    <a href="seonhyeon.html">
+                        <img src="images/seonhyeon.png" alt="Seonghyeon" style="width: 13vw;">
+                    </a>
                 </td>
                 <td style="width: 20vw; text-align: center;">
-                    <img src="images/keonho.png" alt="Keonho" style="width: 16vw;">
+                    <a href="keonho.html">
+                        <img src="images/keonho.png" alt="Keonho" style="width: 16vw;">
+                    </a>
                 </td>
             </tr>
         </table>
