--- a/merch.html
+++ b/merch.html
@@ -24,9 +24,9 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>
-                            <p>Info</p>
-                            <p>Price</p>
+                        <td class="item">
+                            <p class="item-name">Cortis – Color Outside The Lines (scene 1 version)</p>
+                            <p class="item-price">19.99$</p>
                         </td>
                     </tr>
                 </table>
@@ -39,9 +39,9 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>
-                            <p>Info</p>
-                            <p>Price</p>
+                        <td class="item">
+                            <p class="item-name">Cortis – Color Outside The Lines (scene 2 version)</p>
+                            <p class="item-price">19.99$</p>
                         </td>
                     </tr>
                 </table>
@@ -54,9 +54,9 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>
-                            <p>Info</p>
-                            <p>Price</p>
+                        <td class="item">
+                            <p class="item-name">Cortis – Color Outside The Lines (scene 3 version)</p>
+                            <p class="item-price">19.99$</p>
                         </td>
                     </tr>
                 </table>
@@ -69,9 +69,9 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>
-                            <p>Info</p>
-                            <p>Price</p>
+                        <td class="item">
+                            <p class="item-name">Cortis Ball</p>
+                            <p class="item-price">39.99$</p>
                         </td>
                     </tr>
                 </table>
